update the blog notebook

--- a/blog_notebook_for_15_Minutes_of_Machine_Learning_Experiments.ipynb
+++ b/blog_notebook_for_15_Minutes_of_Machine_Learning_Experiments.ipynb
@@ -70,16 +70,7 @@
     "id": "d_hibjM0M53K",
     "outputId": "3d447dda-da99-4495-c2e9-64a3fdefd752"
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/allisond/miniconda/envs/py311/lib/python3.11/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-      "  from .autonotebook import tqdm as notebook_tqdm\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext cudf.pandas"
    ]
@@ -2412,27 +2403,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[2025-04-04 12:21:55.651] [CUML] [info] cuML: Installed accelerator for sklearn.\n",
-      "[2025-04-04 12:21:55.653] [CUML] [info] cuML: Successfully initialized accelerator.\n"
+      "[2025-04-11 16:34:46.945] [CUML] [info] cuML: Installed accelerator for sklearn.\n",
+      "[2025-04-11 16:34:46.945] [CUML] [info] cuML: Installed accelerator for umap.\n",
+      "[2025-04-11 16:34:46.945] [CUML] [info] cuML: Installed accelerator for hdbscan.\n",
+      "[2025-04-11 16:34:46.945] [CUML] [info] cuML: Successfully initialized accelerator.\n"
      ]
     }
    ],
    "source": [
-    "%load_ext cuml.accel\n",
+    "%reload_ext cuml.accel\n",
     "\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, StratifiedKFold\n",
     "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.metrics import roc_auc_score, f1_score"
+    "from sklearn.metrics import roc_auc_score, f1_score\n"
    ]
   },
   {
@@ -2444,7 +2437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -2453,7 +2446,7 @@
        "((1000000, 8), (1000000,), (1000000, 8))"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2474,7 +2467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 39,
    "metadata": {
     "scrolled": true
    },
@@ -2494,15 +2487,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 123 ms, sys: 107 ms, total: 230 ms\n",
-      "Wall time: 229 ms\n"
+      "CPU times: user 88.9 ms, sys: 18 ms, total: 107 ms\n",
+      "Wall time: 106 ms\n"
      ]
     },
     {
@@ -2511,7 +2504,7 @@
        "array(80.36)"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 40,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2535,15 +2528,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 7.54 s, sys: 57.9 ms, total: 7.6 s\n",
-      "Wall time: 7.56 s\n"
+      "CPU times: user 7.59 s, sys: 61.2 ms, total: 7.65 s\n",
+      "Wall time: 7.59 s\n"
      ]
     },
     {
@@ -2552,7 +2545,7 @@
        "array(84.96)"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2576,15 +2569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 5.76 s, sys: 1.49 s, total: 7.25 s\n",
-      "Wall time: 2.62 s\n"
+      "CPU times: user 5.46 s, sys: 1.59 s, total: 7.05 s\n",
+      "Wall time: 2.58 s\n"
      ]
     },
     {
@@ -2593,7 +2586,7 @@
        "array(83.95)"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2617,15 +2610,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 346 ms, sys: 97 ms, total: 443 ms\n",
-      "Wall time: 438 ms\n"
+      "CPU times: user 353 ms, sys: 58.8 ms, total: 412 ms\n",
+      "Wall time: 408 ms\n"
      ]
     }
    ],
@@ -2641,6 +2634,105 @@
     "\n",
     "X_train_scaled = pd.DataFrame(X_train_scaled)\n",
     "X_valid_scaled = pd.DataFrame(X_valid_scaled)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Ensemble Method - Stacking Generalization (1 Trial)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "base_models = [\n",
+    "    (\"logistic_regression\", LogisticRegression(tol=1e-3)), #80.36\n",
+    "    (\"random_forest\", RandomForestClassifier()), #83.95\n",
+    "    (\"k_nearest_neighbors\", KNeighborsClassifier(n_neighbors = 3)) #84.96\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model name:  logistic_regression\n",
+      "Model name:  random_forest\n",
+      "Model name:  k_nearest_neighbors\n",
+      "Model name:  logistic_regression\n",
+      "Model name:  random_forest\n",
+      "Model name:  k_nearest_neighbors\n"
+     ]
+    }
+   ],
+   "source": [
+    "def generate_meta_features(base_models, X, y, X_meta):\n",
+    "    kfold = StratifiedKFold(n_splits=5, shuffle=True, random_state=42)\n",
+    "    meta_features = cp.zeros((X_meta.shape[0], len(base_models)))\n",
+    "    \n",
+    "    for i, (name, model) in enumerate(base_models):\n",
+    "        meta_predictions = cp.zeros((X.shape[0],))\n",
+    "        print(\"Model name: \", name)\n",
+    "\n",
+    "        for train_idx, val_idx in kfold.split(X, y):\n",
+    "            model.fit(cp.array(X.iloc[train_idx]), cp.array(y.iloc[train_idx]))\n",
+    "            predictions = model.predict(cp.array(X.iloc[val_idx]))\n",
+    "            \n",
+    "            # Ensure predictions are 1D\n",
+    "            meta_predictions[val_idx] = predictions.ravel()\n",
+    "        \n",
+    "        # Train the model on the full dataset to predict meta features for test data\n",
+    "        model.fit(cp.array(X), cp.array(y))\n",
+    "\n",
+    "        # Predict meta features for test data\n",
+    "        predictions = model.predict(cp.array(X_meta))\n",
+    "        meta_features[:, i] = cp.array(predictions).ravel()\n",
+    "    \n",
+    "    return meta_features\n",
+    "\n",
+    "# Generate meta features for training and testing\n",
+    "meta_train = generate_meta_features(base_models, X_train_scaled, y_train_df, X_train_scaled)\n",
+    "meta_valid = generate_meta_features(base_models, X_train_scaled, y_train_df, X_valid_scaled)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2025-04-11 16:37:37.427] [CUML] [info] Unused keyword parameter: handle during CPU estimator initialization\n",
+      "[2025-04-11 16:37:37.427] [CUML] [info] Unused keyword parameter: verbose during CPU estimator initialization\n",
+      "[2025-04-11 16:37:37.427] [CUML] [info] Unused keyword parameter: output_type during CPU estimator initialization\n",
+      "Stacking Model accuracy score: 85.24\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Define the meta-model (level-1 model)\n",
+    "meta_model = KNeighborsClassifier()\n",
+    "\n",
+    "# Train the meta-model\n",
+    "meta_model.fit(meta_train, y_train_df)\n",
+    "\n",
+    "# Make predictions with the meta-model\n",
+    "Y_pred = meta_model.predict(meta_valid)\n",
+    "\n",
+    "# Evaluate the performance\n",
+    "acc_meta = cp.round(meta_model.score(cp.asnumpy(meta_valid), cp.asnumpy(y_valid_df)) * 100, 2)\n",
+    "print(f\"Stacking Model accuracy score: {acc_meta}\")"
    ]
   },
   {
@@ -2663,7 +2755,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Logistic Regression"
+    "Logistic Regression HPO"
    ]
   },
   {
@@ -2762,7 +2854,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Random Forest"
+    "Random Forest HPO"
    ]
   },
   {
@@ -2862,7 +2954,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "K-Nearest Neighbors (KNN)"
+    "K-Nearest Neighbors (KNN) HPO"
    ]
   },
   {
@@ -2962,7 +3054,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Ensemble Method - Stacking Generalization"
+    "## Ensemble Method - Stacking Generalization (HPO)"
    ]
   },
   {
@@ -3169,9 +3261,9 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3.11",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "py311"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3183,7 +3275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
